
	* fvwm/expand.c (expand_args_extended): 
	removed range check for positional parameters
	make single arguments not use the 'upper' variable
	changed back to PeekToken for single arguemnts.
	improved some comments.

2006-07-13  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/expand.c (expand_args_extended):
	fixed core dump
	added range check for positional parameters

2006-07-13  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/expand.c (expand_args_extended):
	Fix segfault when called with a tokenless string for single arguments.

2006-07-12  Scott Smedley  <ss@aao.gov.au>
	* docs/FAQ:
	Usage of FvwmAuto module in FAQ 7.17 was incorrect.
	Reported by Serge Koksharov.

2006-07-12  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/placement.c (__explain_placement):
	print initial size of window too

	* libs/Makefile.am (libfvwm_a_SOURCES):
	* libs/fvwm_sys_stat.h:
	added compat file

	* configure.ac:
	added O_NOFOLLOW replacement and always include fcntl.h

2006-07-12  Scott Smedley  <ss@aao.gov.au>
	* libs/Parse.c:
	Added DV's mailing-list comments about how PeekToken & GetNextToken
	work as comments to the source code. (slightly modified)

2006-07-11  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/schedule.c (CMD_Schedule):
	Fixed parsing of "Periodic" option.

2006-07-11  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	Fix for tempfile vulnerabilities in FvwmCommand.
	* configure.ac:
	Added check for lstat.

2006-07-12  Scott Smedley  <ss@aao.gov.au>
	* fvwm/schedule.c:
	* NEWS:
	* AUTHORS:
	* fvwm/fvwm.1.in:
	Added "Periodic" option to Schedule command.

2006-07-11  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/module_interface.c (KillModule, ClosePipes):
	fixed KillModule


2006-07-09  Renato Caldas  <seventhguardian@gmail.com>

	* fvwm/fvwm.c (main):
	changed the -blackout warning to say it will be removed in 3.0

	* fvwm/fvwm.1.in (-blackout):
	updated the manual regarding the future remotion of -blackout
